[gd_scene load_steps=3 format=3 uid="quest_log_scene_1"]

[ext_resource path="res://scripts/ui/quest_log_menu.gd" type="Script" id=1]

[node name="QuestLogMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8

[node name="Title" type="Label" parent="VBox"]
text = "Журнал квестов"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]

[node name="TabContainer" type="TabContainer" parent="VBox"]
layout_mode = 2

[node name="Available" type="VBoxContainer" parent="VBox/TabContainer"]
layout_mode = 1

[node name="AvailableQuests" type="ScrollContainer" parent="VBox/TabContainer/Available"]
layout_mode = 2

[node name="QuestsList" type="VBoxContainer" parent="VBox/TabContainer/Available/AvailableQuests"]
layout_mode = 2

[node name="Active" type="VBoxContainer" parent="VBox/TabContainer"]
layout_mode = 1

[node name="ActiveQuests" type="ScrollContainer" parent="VBox/TabContainer/Active"]
layout_mode = 2

[node name="ActiveList" type="VBoxContainer" parent="VBox/TabContainer/Active/ActiveQuests"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBox"]
text = "Закрыть"

